--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
 html { 
     background: url(../img/background-1920x1080.jpg) no-repeat center center fixed; 
     background-size: cover;
+    font-size: 3.5vw;
     }
+
+img {
+    size: 128px;
+    width: 5vw;
+    height: 5vh;
+}
 
 .btn{
     font-size: 36px;
+    font-size: 4vh;
     }
 
 .flex-container {
@@ -26,6 +34,7 @@ html {
 .header {
     display: flex;
     font-size: 128px;
+    font-size: 10vh;
     justify-content: center;
     color: white;
     background-color:rgba(7, 7, 7, 0.5);
@@ -41,40 +50,46 @@ html {
     padding: 10px 10px 0px 10px;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 30px;
     }
 
 .result {
     display: flex;
     justify-content: space-evenly;
-    font-size: 36px;
+    font-size: 24px;
+    font-size: 3vh;
     flex-direction: row;
     text-align: center;
     flex-wrap: wrap;
-    padding: 5%;
+    padding: 2%;
     }
 
 .challengeresult {
     display: flex;
-    font-size: 36px;
+    font-size: 24px;
+    font-size: 4vh;
     flex-direction: column;
     text-align: center;
     flex-wrap: wrap;
+    padding-bottom:auto;
     }
 
 p {
     justify-content: space-evenly;
     display: flex;
     font-size: 36px;
+    font-size: 4vh;
     color: white;
     font-family: "OctoberCrow";
     width:auto;
-    padding-right: 5%;
+    padding-right: 1%;
     }
 
 .quantity {
-    font-family: Arial, Helvetica, sans-serif;
     color: black;
     display: flex;
     align-self: center;
+    font-family: "OctoberCrow";
+    font-size: 36px;
+    font-size: 2vw;
     }
