--- a/css/main.css
+++ b/css/main.css
@@ -24,12 +24,18 @@ html {
 
 .header {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     font-size: 128px;
     font-size: 6vw;
     border-bottom: 1px solid;
     border-color: rgba(255,255,255,0.3); 
+}
+
+.submit {
+    font-size: 36px;
+    font-size: 4vh;
+
 }
 
 .version {
@@ -51,8 +57,8 @@ html {
   }
 
 .logo {
-    max-height: 100%;
-    max-width: 14vh;
+    max-width: 100%;
+    max-height: 14vh;
 }
 
 body {
